feat: make chat completions more configurable and closer to the openai interface
